# sage

./: .gitignore  README.md  predict.py  pyproject.toml  script.sh  test_prompts.txt
dataset/: clean_datasets.py  merge_datasets.py  prepare_targets.py  train_quality_predictor.py  train_token_predictor.py
dataset/merged/: merged_long.csv  merged_wide.csv  model_a_token_predictor.csv  model_b_quality_predictor.csv
dataset/raw_datasets/: dataset9.csv
models/catboost/: quality_predictor.cbm  token_predictor_input_tokens.cbm  token_predictor_output_tokens.cbm  train_quality_predictor_catboost.py  train_token_predictor_catboost.py
models/lightgbm/: quality_predictor.txt  quality_predictor_classes.json  token_predictor_input_tokens.txt  token_predictor_output_tokens.txt  train_quality_predictor_lightgbm.py  train_token_predictor_lightgbm.py
prompts/: test_prompts_2.txt
