[project]
name = "sage"
version = "0.1.0"
description = "SAGE - Smart Advisor for Generative modEls: predict LLM token usage, cost, and response quality from prompt features."
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2",
    "joblib>=1.5",
    "lightgbm>=4.7",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.9",
]

[tool.uv]
package = false
